--- a/resources/assets/less/base.less
+++ b/resources/assets/less/base.less
@@ -201,7 +201,7 @@ select.form-control {
 // hopefully this is just a placeholder until the new button design is implemented...
 .btn-osu-default {
   background-color: @osu-colour-h1;
-  box-shadow: 0 10px @osu-colour-d, 0 7px 10px fade(#000, 80%);
+  box-shadow: 0 10px @osu-colour-h2, 0 7px 10px fade(#000, 80%);
   margin-bottom: 10px;
   overflow: hidden; // hide the &::before highlight layer
 
@@ -217,7 +217,7 @@ select.form-control {
 
   &[disabled], &.disabled {
     background-color: @osu-colour-l1;
-    box-shadow: 0 10px @osu-colour-d1, 0 7px 10px fade(#000, 60%);
+    box-shadow: 0 10px @osu-colour-b6, 0 7px 10px fade(#000, 60%);
   }
 
   &:focus {
