--- a/resources/assets/less/bbcode.less
+++ b/resources/assets/less/bbcode.less
@@ -44,7 +44,7 @@
     color: @osu-colour-l1;
 
     .forum-post-content & {
-      color: @osu-colour-d;
+      color: @osu-colour-h2;
     }
   }
 
