--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -104,7 +104,7 @@
   }
 
   &__admin-note {
-    background-color: @osu-colour-d;
+    background-color: @osu-colour-h2;
     color: black;
     font-weight: bold;
     padding: 20px;
