--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -93,7 +93,7 @@
     border-radius: 10000px;
     padding: 10px;
 
-    background-color: @osu-colour-d;
+    background-color: @osu-colour-h2;
 
     &:hover {
       background-color: @osu-colour-l3;
@@ -226,7 +226,7 @@
   }
 
   &--activated, &.js-activated {
-    background-color: @osu-colour-d;
+    background-color: @osu-colour-h2;
     color: white;
 
     &:focus,
