--- a/resources/assets/less/sections.less
+++ b/resources/assets/less/sections.less
@@ -37,18 +37,18 @@
     // the parts after 50% are for the header size transition.
 
     background-image: linear-gradient(
-      .osu-hsla(@osu-colour-d, 0.9)[@hsla] 0%,
-      @osu-colour-d 37.5%,
-      @osu-colour-d 50%,
-      @osu-colour-d 50%,
-      @osu-colour-d 100%
+      .osu-hsla(@osu-colour-h2, 0.9)[@hsla] 0%,
+      @osu-colour-h2 37.5%,
+      @osu-colour-h2 50%,
+      @osu-colour-h2 50%,
+      @osu-colour-h2 100%
     );
     background-size: 200% 200%;
   }
 }
 
 .u-section--bg {
-  background-color: @osu-colour-d;
+  background-color: @osu-colour-h2;
 }
 
 .menu-colour(beatmaps, pink);
