--- a/resources/assets/less/bem/btn-circle.less
+++ b/resources/assets/less/bem/btn-circle.less
@@ -83,7 +83,7 @@
   }
 
   &--activated, &.js-activated {
-    background-color: @osu-colour-d;
+    background-color: @osu-colour-h2;
     color: @osu-colour-b5;
 
     &:focus,
