Tweak Markdown code block colours

--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -212,15 +212,14 @@
 
   code {
     .default-border-radius();
-    background-color: @osu-colour-b2;
-    border: 1px solid @osu-colour-b6;
-    color: @osu-colour-b6;
+    background-color: @osu-colour-b6;
+    color: @osu-colour-l1;
     padding: 1px 4px;
   }
 
   pre {
-    background-color: @osu-colour-b2;
-    color: @osu-colour-b6;
+    background-color: @osu-colour-b6;
+    color: @osu-colour-l1;
     border: none;
     border-radius: 0px;
 
