--- a/resources/assets/less/bem/user-session-list-session.less
+++ b/resources/assets/less/bem/user-session-list-session.less
@@ -31,7 +31,7 @@
     background: @osu-colour-b2;
     padding: 2px 8px;
     border-radius: 13px;
-    color: @osu-colour-b6;
+    color: @osu-colour-l1;
     font-size: 10px;
     text-transform: uppercase;
     margin-left: 5px;
