Fix user link in mobile forum
".link--white" has lower priority than ".forum-post a". As ".link--white" itself is used somewhere else, add new style instead.

--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -335,6 +335,13 @@
     margin: 5px 0;
   }
 
+  &__user-link-xs {
+    // Overrides the ".forum-post a" above.
+    && {
+      color: #fff;
+    }
+  }
+
   &__username {
     .default-text-shadow();
     display: block;
