Show droplet misses instead of droplets

--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -81,7 +81,8 @@
     border-bottom: 2px solid @osu-colour-b3;
     text-transform: uppercase;
 
-    width: 50px;
+    min-width: 50px;
+    white-space: nowrap;
 
     &--wider {
       min-width: 80px;
