--- a/resources/assets/less/bem/beatmap-scoreboard-table.less
+++ b/resources/assets/less/bem/beatmap-scoreboard-table.less
@@ -104,8 +104,10 @@
     }
 
     &--hitstat {
-      max-width: 45px;
+      max-width: 55px;
       min-width: 30px;
+      white-space: nowrap;
+      padding-right: 5px;
     }
 
     &--miss {
