Correct faded color for scoreboard friend and self row

--- a/resources/assets/less/bem/beatmap-scoreboard-table.less
+++ b/resources/assets/less/bem/beatmap-scoreboard-table.less
@@ -47,7 +47,6 @@
     }
 
     .@{passive-row}.@{name} & {
-      color: #fff;
       background-color: @color;
     }
 
@@ -181,7 +180,7 @@
     }
 
     &--zero {
-      color: @osu-colour-b2;
+      color: fade(#fff, 40%);
     }
 
     // when row is selected
