--- a/resources/assets/less/bem/beatmap-discussion-new.less
+++ b/resources/assets/less/bem/beatmap-discussion-new.less
@@ -109,7 +109,7 @@
   }
 
   &__notice {
-    background-color: #666;
+    background-color: @osu-colour-b5;
     padding: 5px @_side-padding;
     color: #fff;
     font-size: @font-size--normal;
@@ -121,7 +121,7 @@
   }
 
   &__notice-link {
-    .link-gray-light();
+    .link-default();
   }
 
   &__timestamp-col {
