Update background color

--- a/resources/assets/less/bem/oauth-form.less
+++ b/resources/assets/less/bem/oauth-form.less
@@ -64,7 +64,7 @@
   }
 
   &__dialog {
-    background-color: #333;
+    background-color: @osu-colour-b5;
     border-radius: @border-radius-large;
     width: 500px;
     max-width: 100%;
