Fix beatmap top-score username hover

--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -133,9 +133,9 @@
     font-style: italic;
     font-weight: 700;
     margin-bottom: 2px;
-    color: white;
     display: block;
     margin-right: 10px;
+    .link-inverted();
   }
 
   &__wrapping-container {
