Contrast fixes, pass 1.

--- a/resources/assets/less/bem/account-edit-entry.less
+++ b/resources/assets/less/bem/account-edit-entry.less
@@ -163,7 +163,7 @@
     }
 
     &:focus {
-      border-color: @osu-colour-h1;
+      border-color: @osu-colour-l1;
     }
 
     .@{top}[data-form-error-state=error] & {
@@ -181,7 +181,7 @@
     padding-bottom: 5px;
     order: -1;
     font-weight: bold;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     @media @desktop {
       align-self: center;
