--- a/resources/assets/less/bem/artist.less
+++ b/resources/assets/less/bem/artist.less
@@ -141,7 +141,7 @@
   }
 
   &__track-count {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-size: 12px;
     text-align: center;
   }
