--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -30,7 +30,7 @@
 
   &--beatmap-stats {
     height: 5px;
-    background-color: fade(#fff, 50%);
+    background-color: @osu-colour-b6;
   }
 
   &--beatmap-success-rate {
