--- a/resources/assets/less/bem/beatmap-discussion-timestamp.less
+++ b/resources/assets/less/bem/beatmap-discussion-timestamp.less
@@ -45,7 +45,7 @@
   }
 
   &__text {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-size: @_text-size;
     // To prevent the height being included when calculating vertical center
     // position of the icons.
