--- a/resources/assets/less/bem/beatmap-playcount.less
+++ b/resources/assets/less/bem/beatmap-playcount.less
@@ -109,12 +109,12 @@
   }
 
   &__mapper {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
   }
 
   &__mapper-link {
     font-weight: bold;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     .link-hover({
       color: @osu-colour-l1;
