--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -74,7 +74,7 @@
   &__stat-header {
     font-size: 10px;
     font-weight: 700;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     padding-bottom: 2px;
 
