--- a/resources/assets/less/bem/beatmap-scoreboard-table.less
+++ b/resources/assets/less/bem/beatmap-scoreboard-table.less
@@ -70,7 +70,7 @@
     font-weight: 700;
     text-transform: uppercase;
     padding-bottom: 5px;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     // in order of columns
     &--rank {
