--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -47,7 +47,7 @@
 
   &[disabled] {
     background-color: @osu-colour-b3;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
   }
 
   &--account-edit {
@@ -81,7 +81,8 @@
   }
 
   &--comment-editor[disabled] {
-    opacity: 0.4;
+    background-color: @osu-colour-b5;
+    color: @osu-colour-f1;
 
     &::before {
       display: none;
