--- a/resources/assets/less/bem/chat-input.less
+++ b/resources/assets/less/bem/chat-input.less
@@ -48,7 +48,7 @@
     font-family: @font-content;
 
     &::placeholder {
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
     }
 
     &--disabled {
