--- a/resources/assets/less/bem/comment.less
+++ b/resources/assets/less/bem/comment.less
@@ -51,7 +51,7 @@
     .reset-input();
     .link-default();
     text-transform: lowercase;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     .link-hover({ color: white });
 
     &:hover {
@@ -234,10 +234,10 @@
     font-weight: bold;
 
     &--footer {
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
       font-size: @font-size--normal;
       a {
-        color: @osu-colour-b1;
+        color: @osu-colour-f1;
         .link-hover({ color: white });
       }
     }
@@ -265,7 +265,7 @@
     width: @_avatar;
     font-size: 18px; // icon size
     display: none;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     @media @desktop {
       display: block;
