--- a/resources/assets/less/bem/comments.less
+++ b/resources/assets/less/bem/comments.less
@@ -36,8 +36,8 @@
     border-radius: 10000px;
     font-style: normal;
     font-weight: bold;
-    background-color: @osu-colour-b4;
-    color: @osu-colour-l1;
+    background-color: @osu-colour-b6;
+    color: @osu-colour-f1;
   }
 
   &__items {
