--- a/resources/assets/less/bem/contest-art-entry.less
+++ b/resources/assets/less/bem/contest-art-entry.less
@@ -121,9 +121,6 @@
 
   &__result-votes {
     font-size: 10px;
-    color: @osu-colour-b1;
-    &--percentage {
-      color: @osu-colour-b2;
-    }
+    color: @osu-colour-f1;
   }
 }
