--- a/resources/assets/less/bem/contest-voting-list.less
+++ b/resources/assets/less/bem/contest-voting-list.less
@@ -48,7 +48,7 @@
 
   &__row {
     background-color: @osu-colour-b4;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-size: 12px;
     border-bottom: 2px solid @osu-colour-b6;
     transition: 0.1s;
@@ -76,7 +76,7 @@
 
   &__header {
     text-transform: uppercase;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-size: 10px;
     line-height: 32px;
     display: flex;
