--- a/resources/assets/less/bem/contest.less
+++ b/resources/assets/less/bem/contest.less
@@ -109,7 +109,7 @@
   &__vote-summary-text {
     float: right;
     text-transform: uppercase;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-weight: bold;
     height: 16px;
     display: flex;
