--- a/resources/assets/less/bem/countdown-timer.less
+++ b/resources/assets/less/bem/countdown-timer.less
@@ -50,6 +50,6 @@
     background: @osu-colour-b5;
     font-size: 12px;
     line-height: 14px;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
   }
 }
