--- a/resources/assets/less/bem/footer.less
+++ b/resources/assets/less/bem/footer.less
@@ -20,14 +20,11 @@
   @top: footer;
 
   background-color: @osu-colour-b5;
-
-  color: @osu-colour-b1;
+  color: @osu-colour-f1;
   font-size: 10px;
-
   display: flex;
   flex-direction: column;
   flex: none;
-
   padding: 10px 0 5px;
 
   &--landing {
