--- a/resources/assets/less/bem/page-extra.less
+++ b/resources/assets/less/bem/page-extra.less
@@ -148,6 +148,7 @@
   }
 
   &__title-count {
+    color: @osu-colour-f1;
     background-color: @osu-colour-b6;
     margin-left: 5px;
     padding: 5px 10px;
