--- a/resources/assets/less/bem/profile-extra-recent-infringements.less
+++ b/resources/assets/less/bem/profile-extra-recent-infringements.less
@@ -71,7 +71,7 @@
     }
 
     &--date {
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
       width: 160px;
       padding-right: 20px;
     }
