--- a/resources/assets/less/bem/ranking-page-table.less
+++ b/resources/assets/less/bem/ranking-page-table.less
@@ -26,7 +26,7 @@
 
   &__heading {
     font-weight: normal;
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     padding: 5px 10px;
     text-align: center;
 
@@ -47,7 +47,7 @@
     padding: 6px 0px;
 
     &--dimmed {
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
     }
 
     &--rank {
