--- a/resources/assets/less/bem/search-header.less
+++ b/resources/assets/less/bem/search-header.less
@@ -77,7 +77,7 @@
     display: flex;
 
     &::placeholder {
-      color: @osu-colour-b1;
+      color: @osu-colour-f1;
     }
 
     @media @desktop {
