--- a/resources/assets/less/bem/user-home-beatmapset.less
+++ b/resources/assets/less/bem/user-home-beatmapset.less
@@ -22,7 +22,7 @@
   display: flex;
   transition: 0.1s;
   .link-default();
-  color: @osu-colour-b1;
+  color: @osu-colour-f1;
 
   // undo padding from container
   margin: 10px -20px;
@@ -79,7 +79,7 @@
   }
 
   &__playcount {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
   }
 
   &__title {
