--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -97,6 +97,7 @@
 @osu-colour-d4: hsl(var(--base-hue), 20%, 20%);
 @osu-colour-d5: hsl(var(--base-hue), 20%, 15%);
 @osu-colour-d6: hsl(var(--base-hue), 20%, 10%);
+@osu-colour-f1: hsl(var(--base-hue), 10%, 60%);
 @osu-colour-b1: hsl(var(--base-hue), 10%, 40%);
 @osu-colour-b2: hsl(var(--base-hue), 10%, 30%);
 @osu-colour-b3: hsl(var(--base-hue), 10%, 25%);
