--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -107,7 +107,7 @@
   }
 
   &__message-timestamp {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
     font-size: 10px;
     margin-top: 5px;
   }
