--- a/resources/assets/less/bem/page-mode-link.less
+++ b/resources/assets/less/bem/page-mode-link.less
@@ -75,8 +75,8 @@
     font-size: 80%;
     font-weight: bold;
     margin-left: 5px;
-    background-color: @osu-colour-b4;
-    color: @osu-colour-l1;
+    background-color: @osu-colour-b6;
+    color: @osu-colour-f1;
   }
 
   &__stripe {
