--- a/resources/assets/less/bem/user-session-list-session.less
+++ b/resources/assets/less/bem/user-session-list-session.less
@@ -28,10 +28,10 @@
   }
 
   &__current-badge {
-    background: @osu-colour-b2;
+    background: @osu-colour-b6;
     padding: 2px 8px;
     border-radius: 13px;
-    color: @osu-colour-l1;
+    color: @osu-colour-f1;
     font-size: 10px;
     text-transform: uppercase;
     margin-left: 5px;
@@ -70,7 +70,7 @@
   }
 
   &__last-active {
-    color: @osu-colour-b1;
+    color: @osu-colour-f1;
 
     @media @desktop {
       width: 50%;
