Bring yellow back to user profile graphs

--- a/resources/assets/less/bem/line-chart.less
+++ b/resources/assets/less/bem/line-chart.less
@@ -47,7 +47,7 @@
     .@{_top}--profile-page & {
       .circle(@_marker-radius-profile-page * 2);
       background-color: @osu-colour-b5;
-      border-color: @osu-colour-h1;
+      border-color: @yellow;
       border-width: (@_line-width-profile-page * 2);
       top: (-@_marker-radius-profile-page);
       left: (-@_marker-radius-profile-page);
@@ -63,7 +63,7 @@
     left: (-@_line-width / 2);
 
     .@{_top}--profile-page & {
-      background-color: @osu-colour-h1;
+      background-color: @yellow;
       width: @_line-width-profile-page;
       left: (-@_line-width-profile-page / 2);
     }
@@ -120,7 +120,7 @@
     stroke-width: @_line-width;
 
     .@{_top}--profile-page & {
-      stroke: @osu-colour-h1;
+      stroke: @yellow;
       stroke-width: @_line-width-profile-page;
     }
   }
@@ -144,7 +144,7 @@
       stroke: #ccc;
 
       .@{_top}--profile-page & {
-        stroke: #000;
+        stroke: @osu-colour-b6;
       }
     }
   }
