Misc colour tweaks

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -105,7 +105,7 @@
     width: calc(100% - 6px);
     margin-left: 6px;
     padding-left: 2px;
-    color: @osu-colour-l1;
+    color: @osu-colour-f1;
 
     &:hover {
       color: #fff;
@@ -151,7 +151,7 @@
 
     &--time {
       font-size: @font-size--small;
-      color: @osu-colour-l1;
+      color: @osu-colour-f1;
     }
 
     .@{_top}:hover & {
