--- a/resources/assets/less/bem/play-detail.less
+++ b/resources/assets/less/bem/play-detail.less
@@ -238,7 +238,7 @@
 
   &__pp-unit {
     font-size: @font-size--normal;
-    color: @osu-colour-h2;
+    color: @osu-colour-l3;
   }
 
   &__score-detail {
