--- a/resources/assets/less/bem/report-form.less
+++ b/resources/assets/less/bem/report-form.less
@@ -115,7 +115,7 @@
     background-color: @_background-color;
 
     &::placeholder {
-      color: @osu-colour-b2;
+      color: @osu-colour-f1;
     }
   }
 }
