--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -179,6 +179,10 @@
     &:hover {
       background-color: @osu-colour-b5;
       .highlight-stripe();
+
+      .@{_top}--nav2 & {
+        background-color: transparent;
+      }
     }
 
     &--active {
