--- a/resources/assets/less/bem/changelog-entry.less
+++ b/resources/assets/less/bem/changelog-entry.less
@@ -57,7 +57,7 @@
     // having anything but markdown-formatted page inside may result in sadness.
     &--message {
       font-size: @font-size--normal;
-      color: white;
+      color: @osu-colour-f1;
       margin-top: 2px;
 
       h1, h2, h3, h4, h5, h6 {
