--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -220,6 +220,7 @@
 @import "bem/osu-page-header";
 @import "bem/osu-page-header-v2";
 @import "bem/osu-page-header-v3";
+@import "bem/osu-table";
 @import "bem/page-contents";
 @import "bem/page-extra";
 @import "bem/page-extra-tabs";
