--- a/resources/assets/less/bem/admin-contest-entry.less
+++ b/resources/assets/less/bem/admin-contest-entry.less
@@ -27,12 +27,17 @@
 
   &__user-column {
     width: 250px;
+    padding-left: 10px;
   }
 
   &__avatar {
     display: inline-block;
     width: 32px;
     margin-right: 5px;
+  }
+
+  &__preview {
+    padding: 20px;
   }
 
   &__user-link {
@@ -51,6 +56,7 @@
 
     &--button {
       text-align: center;
+      background-color: @osu-colour-b5 !important;
     }
   }
 }
