Only set hover background on the transparent nav2 menu items

--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -180,8 +180,8 @@
       background-color: @osu-colour-b5;
       .highlight-stripe();
 
-      .@{_top}--nav2 & {
-        background-color: transparent;
+      .@{_top}--nav2-transparent & {
+        background-color: @osu-colour-b6;
       }
     }
 
