Update wiki search results design to match forum post results

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -277,6 +277,7 @@
 @import "bem/search-highlight";
 @import "bem/search-result";
 @import "bem/search-result-entry";
+@import "bem/search-wiki-page";
 @import "bem/show-more-link";
 @import "bem/simple-form";
 @import "bem/simple-menu";
