Change hover outlines to match the section the search results are in

--- a/resources/assets/less/bem/search-entry.less
+++ b/resources/assets/less/bem/search-entry.less
@@ -27,6 +27,18 @@
 
   &:hover {
     border: 2px solid @osu-colour-l1;
+
+    .search-result--beatmapset & {
+      border-color: @pink-dark;
+    }
+
+    .search-result--forum_post & {
+      border-color: @yellow-dark;
+    }
+
+    .search-result--wiki_page & {
+      border-color: @purple-dark;
+    }
   }
 
   &__row {
