--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -51,6 +51,10 @@
       border: 2px solid @osu-colour-l1;
       border-radius: @card-border-radius;
       pointer-events: none;
+
+      .search-result--user & {
+        border-color: @blue-dark;
+      }
     }
   }
 
