Design cleanup and refactors of beatmap discussion posts

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -327,6 +327,7 @@
 @import "bem/user-action-button";
 @import "bem/user-card";
 @import "bem/user-cards";
+@import "bem/user-group-badge";
 @import "bem/user-home";
 @import "bem/user-home-beatmapset";
 @import "bem/user-list";
