--- a/resources/assets/less/bem/beatmap-discussion-system-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-system-post.less
@@ -17,7 +17,7 @@
  */
 
 .beatmap-discussion-system-post {
-  @resolved-color: @green;
+  @resolved-color: @osu-colour-lime-3;
 
   margin: 15px 15px;
 
@@ -51,6 +51,6 @@
   }
 
   &__user {
-    .link-default();
+    .link-inverted();
   }
 }
