--- a/resources/assets/less/bem/beatmap-discussion-vote.less
+++ b/resources/assets/less/bem/beatmap-discussion-vote.less
@@ -43,13 +43,13 @@
 
   &--up {
     &, &:hover {
-      color: @green;
+      color: @osu-colour-lime-3;
     }
   }
 
   &--down {
     &, &:hover {
-      color: @yellow-dark;
+      color: @osu-colour-orange-2;
     }
   }
 
