--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -235,15 +235,12 @@
 @beatmap-discussion--reply-padding: (20px + @beatmap-discussion--avatar-size);
 @beatmap-discussion--timestamp-width: 110px;
 
-@beatmap-discussion--color-hype: @blue-dark;
-@beatmap-discussion--color-mapper-note: @purple;
-@beatmap-discussion--color-praise: @blue-dark;
-@beatmap-discussion--color-problem: @pink-dark;
-@beatmap-discussion--color-resolved: @green;
-@beatmap-discussion--color-suggestion: @yellow-dark;
-
-@beatmap-discussion--user-color-moderator: @yellow-dark;
-@beatmap-discussion--user-color-owner: @green-dark;
+@beatmap-discussion--color-hype: @osu-colour-blue-3;
+@beatmap-discussion--color-mapper-note: @osu-colour-purple-1;
+@beatmap-discussion--color-praise: @osu-colour-blue-3;
+@beatmap-discussion--color-problem: @osu-colour-red-3;
+@beatmap-discussion--color-resolved: @osu-colour-lime-3;
+@beatmap-discussion--color-suggestion: @osu-colour-orange-3;
 
 @beatmappack-listing--gutter: 20px;
 
