--- a/resources/assets/less/bem/bar.less
+++ b/resources/assets/less/bem/bar.less
@@ -54,7 +54,7 @@
   }
 
   &--beatmapset-nomination-on {
-    background-color: @green;
+    background-color: @osu-colour-lime-3;
   }
 
   &--double {
