--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -83,7 +83,7 @@
     border-radius: @border-radius-base 0 0 @border-radius-base;
 
     &--resolved {
-      background-color: @green;
+      background-color: @osu-colour-lime-3;
     }
   }
 
