Add colour for bot group

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -311,6 +311,10 @@
     flex: none;
     width: 2px;
 
+    .@{_top}--bot & {
+      background-color: @osu-colour-group-bot;
+    }
+
     .@{_top}--dev & {
       background-color: @osu-colour-group-dev;
     }
