--- a/resources/assets/less/colors.less
+++ b/resources/assets/less/colors.less
@@ -144,6 +144,7 @@
 // New group colours (as of 2019)
 // TODO: replace group_colour in phpbb_groups and use that instead?
 //
+@osu-colour-group-bot: @osu-colour-f1; // note: bot badges are inverted, so this is actually the background colour
 @osu-colour-group-dev: #EB47D0;
 @osu-colour-group-gmt: #99EB47;
 @osu-colour-group-nat: #EB8C47;
