Re-add user group colours to user-filter dropdown list

--- a/resources/assets/less/bem/beatmap-discussions-user-filter.less
+++ b/resources/assets/less/bem/beatmap-discussions-user-filter.less
@@ -28,24 +28,49 @@
   }
 
   &__item {
-    &--admin {
-      .link-hover({ color: @beatmap-discussion--user-color-moderator });
-      color: @beatmap-discussion--user-color-moderator;
+    &--bot {
+      .link-hover({ color: @osu-colour-group-bot });
+      color: @osu-colour-group-bot;
     }
 
-    &--bng {
-      .link-hover({ color: @beatmap-discussion--user-color-moderator });
-      color: @beatmap-discussion--user-color-moderator;
+    &--dev {
+      .link-hover({ color: @osu-colour-group-dev });
+      color: @osu-colour-group-dev;
     }
 
-    &--owner {
-      .link-hover({ color: @beatmap-discussion--user-color-owner });
-      color: @beatmap-discussion--user-color-owner;
+    &--gmt {
+      .link-hover({ color: @osu-colour-group-gmt });
+      color: @osu-colour-group-gmt;
     }
 
     &--nat {
-      .link-hover({ color: @beatmap-discussion--user-color-moderator });
-      color: @beatmap-discussion--user-color-moderator;
+      .link-hover({ color: @osu-colour-group-nat });
+      color: @osu-colour-group-nat;
+    }
+
+    &--bng {
+      .link-hover({ color: @osu-colour-group-bng });
+      color: @osu-colour-group-bng;
+    }
+
+    &--bng_limited {
+      .link-hover({ color: @osu-colour-group-bng });
+      color: @osu-colour-group-bng;
+    }
+
+    &--alumni {
+      .link-hover({ color: @osu-colour-group-alumni });
+      color: @osu-colour-group-alumni;
+    }
+
+    &--support {
+      .link-hover({ color: @osu-colour-group-support });
+      color: @osu-colour-group-support;
+    }
+
+    &--mapper {
+      .link-hover({ color: @osu-colour-blue-1 });
+      color: @osu-colour-blue-1;
     }
   }
 }
