Update menu highlights for beatmap section to be blue

--- a/resources/assets/less/sections.less
+++ b/resources/assets/less/sections.less
@@ -51,8 +51,8 @@
   background-color: @osu-colour-h2;
 }
 
-.menu-colour(beatmaps, pink);
-.menu-colour(beatmapsets, pink);
+.menu-colour(beatmaps, blue);
+.menu-colour(beatmapsets, blue);
 .menu-colour(community, pink);
 .menu-colour(error, pink);
 .menu-colour(help, yellow);
@@ -60,7 +60,6 @@
 .menu-colour(multiplayer, pink);
 .menu-colour(rankings, green);
 .menu-colour(store, pink);
-.menu-colour(user, blue);
 
 .menu-colour(@section, @colour) {
   .u-section-@{section}--before-bg-normal {
