--- a/resources/assets/less/bem/osu-table.less
+++ b/resources/assets/less/bem/osu-table.less
@@ -30,10 +30,6 @@
     margin-right: -@handle;
   }
 
-  &--taller-rows {
-    height: 3em;
-  }
-
   &__table {
     width: 100%;
     min-width: 800px;
@@ -49,6 +45,10 @@
 
   &__body-row {
     height: @row-height;
+
+    .@{_top}--taller-rows & {
+      height: 3em;
+    }
 
     // @passive-row
     &--highlightable {
