--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -184,10 +184,11 @@
 
       h2 {
         font-size: 16px;
-        display: inline-block;
         margin-bottom: 10px;
         padding-bottom: 5px;
         border-bottom: 2px solid @osu-colour-h1;
+        width: max-content;
+        max-width: 100%;
       }
 
       h3 {
