change bn to nominator

--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -56,14 +56,14 @@
   &--bng {
     color: @osu-colour-group-bng;
     &::before {
-      content: 'BN';
+      content: 'NOMINATOR';
     }
   }
 
   &--bng_limited {
     color: @osu-colour-group-bng;
     &::before {
-      content: 'BN';
+      content: 'NOMINATOR';
     }
   }
 
