Add invalid link page and fix titles

--- a/resources/assets/less/bem/account-verification-completed.less
+++ b/resources/assets/less/bem/account-verification-completed.less
@@ -22,11 +22,13 @@
   &__icon {
     font-size: 60px; // icon size
     color: @green;
-    margin-bottom: 10px;
   }
 
   &__text {
-    margin-top: 10px;
     font-size: @font-size--normal;
+  }
+
+  &__title {
+    margin: 10px 0;
   }
 }
