--- a/resources/assets/less/bem/oauth-form.less
+++ b/resources/assets/less/bem/oauth-form.less
@@ -166,6 +166,11 @@
       margin-bottom: 50px;
     }
 
+    &--verification-invalid {
+      display: block;
+      margin-bottom: 50px;
+    }
+
     &--wrong-user {
       display: block;
       font-size: @font-size--normal;
