--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -331,6 +331,10 @@
     &--sub {
       font-size: 12px;
     }
+
+    @media @mobile {
+      display: none;
+    }
   }
 
   &__status-messages {
@@ -343,6 +347,10 @@
 
     .@{top}--list & {
       text-align: right;
+    }
+
+    @media @narrow {
+      display: none;
     }
   }
 
