auto size first column

--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -188,7 +188,7 @@
 
     &--details {
       display: grid;
-      grid-template-columns: @avatar-size 1fr;
+      grid-template-columns: auto 1fr;
     }
 
     &--status {
