size supporter icon for support_level

--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -23,4 +23,13 @@
   border-radius: 50%;
   color: white;
   background-color: @pink;
+
+  // TODO: combine with profile-info__icon--supporter somehow?
+  &--with-level {
+    width: unset;
+    height: 20px;
+    border-radius: 10000px;
+    font-size: 12px; // icon size
+    padding: 0 10px;
+  }
 }
