--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -18,18 +18,20 @@
 
 .supporter-icon {
   .center-content();
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
   color: white;
   background-color: @pink;
 
   // TODO: combine with profile-info__icon--supporter somehow?
-  &--with-level {
-    width: unset;
-    height: 20px;
-    border-radius: 10000px;
-    font-size: 12px; // icon size
-    padding: 0 10px;
+  height: 20px;
+  border-radius: 10000px;
+  font-size: 12px;
+  padding: 0 10px;
+
+  &--user-card {
+    height: 26px;
+    width: 26px;
+    font-size: 13px;
+    border-radius: 50%;
+    padding: unset;
   }
 }
