--- a/resources/assets/less/bem/supporter-icon.less
+++ b/resources/assets/less/bem/supporter-icon.less
@@ -28,9 +28,9 @@
   padding: 0 10px;
 
   &--user-card {
-    height: 26px;
-    width: 26px;
-    font-size: 13px;
+    height: @user-card-icon-size;
+    width: @user-card-icon-size;
+    font-size: @user-card-icon-size / 2;
     border-radius: 50%;
     padding: unset;
   }
