--- a/resources/assets/less/bem/user-action-button.less
+++ b/resources/assets/less/bem/user-action-button.less
@@ -57,9 +57,9 @@
   }
 
   &--user-card {
-    height: 26px;
-    width: 26px;
-    font-size: 13px;
+    height: @user-card-icon-size;
+    width: @user-card-icon-size;
+    font-size: @user-card-icon-size / 2;
     border-radius: 50%;
   }
 
