--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -22,8 +22,8 @@
   @avatar-size: 60px;
   @avatar-size--list: 40px;
   @background-color: @osu-colour-b4;
-  @background-overlay-opacity--online: 0.6;
-  @background-overlay-opacity--offline: 0.7;
+  @background-overlay-fade--online: .osu-hsla(@osu-colour-b5, 0.6)[@hsla];
+  @background-overlay-fade--offline: .osu-hsla(@osu-colour-b5, 0.7)[@hsla];
   @card-border-radius: 10px;
   @card-item-spacing: 10px;
   @flag-width: @user-card-icon-size * 1.5;
@@ -150,27 +150,25 @@
   &__background-overlay {
     .full-size();
     border-radius: @card-border-radius;
-    background-color: @osu-colour-b5;
-    opacity: @background-overlay-opacity--offline;
+    background: @background-overlay-fade--offline;
 
     &--online {
-      opacity: @background-overlay-opacity--online;
+      background: @background-overlay-fade--online;
     }
 
     .@{top}--list & {
       border-radius: @avatar-border-radius;
       background: linear-gradient(
         to right,
-        .osu-hsla(@osu-colour-b5, 1)[@hsla] 50%,
-        .osu-hsla(@osu-colour-b5, @background-overlay-opacity--offline)[@hsla]
+        @osu-colour-b5 50%,
+        @background-overlay-fade--offline
       );
-      opacity: 1;
 
       &--online {
         background: linear-gradient(
           to right,
-          .osu-hsla(@osu-colour-b5, 1)[@hsla] 50%,
-          .osu-hsla(@osu-colour-b5, @background-overlay-opacity--online)[@hsla]
+          @osu-colour-b5 50%,
+          @background-overlay-fade--online
         );
       }
     }
