Revert "Global fancy scrollbar, adjust color"
This reverts commit 92908a9691c068db584a2f231cb4a6d98b71ff27.

--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -28,6 +28,8 @@
   transition: filter 200ms ease-in-out, opacity 200ms ease-in-out; // for fading in after &--masked is removed
 
   &--mobile-app {
+    .fancy-scrollbar();
+
     @media @mobile {
       position: fixed;
     }
