--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -25,6 +25,11 @@
     opacity: 0.5;
   }
 
+  &--preview {
+    flex-grow: 1;
+    overflow: hidden;
+  }
+
   &__actions {
     flex: none;
 
@@ -108,7 +113,7 @@
     // hopefully enough for type and resolve status icons.
     width: 50px;
 
-    .@{_top}--timeline & {
+    .@{_top}--timeline &, .@{_top}--preview & {
       // with timestamp, timeline's line and dot.
       width: 110px;
     }
