Fix discussion gradient-separator display

--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -51,7 +51,7 @@
         content: ' ';
         width: 1px;
         right: 100%;
-        background-image: linear-gradient(to bottom, transparent, @osu-colour-b1 50%, transparent);
+        background-image: linear-gradient(to bottom, .osu-hsla(@osu-colour-b1, 0)[@hsla], @osu-colour-b1 50%, .osu-hsla(@osu-colour-b1, 0)[@hsla]);
       }
     }
   }
