Add 'ppy' pseudo user group

--- a/resources/assets/less/bem/user-group-badge.less
+++ b/resources/assets/less/bem/user-group-badge.less
@@ -23,6 +23,18 @@
   color: white;
   padding: 2px 10px;
   font-weight: bold;
+  display: flex;
+
+  &::before {
+    align-self: center;
+  }
+
+  &--ppy{
+    color: @osu-colour-group-ppy;
+    &::before {
+      content: 'PPY';
+    }
+  }
 
   &--bot {
     background-color: @osu-colour-group-bot;
