--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -311,6 +311,10 @@
     flex: none;
     width: 2px;
 
+    .@{_top}--ppy & {
+      background-color: @osu-colour-group-ppy;
+    }
+
     .@{_top}--bot & {
       background-color: @osu-colour-group-bot;
     }
