--- a/resources/assets/less/bem/beatmap-pack-items.less
+++ b/resources/assets/less/bem/beatmap-pack-items.less
@@ -22,15 +22,34 @@
   padding: @beatmappack-listing--gutter;
 
   &__artist {
-    margin-left: 8px;
+    margin-left: 1em;
     font-weight: 600;
   }
 
-  &__icon {
-    color: @osu-colour-b5;
-    &--cleared {
-      color: @osu-colour-l1;
-    }
+  &__clear {
+    color: #fff;
+    font-size: 80%;
+    font-style: normal;
+    font-weight: 600;
+    text-shadow: 0 1px 2px fade(#000, 75%);
+    text-transform: uppercase;
+    vertical-align: text-top;
+    visibility: hidden;
+  }
+
+  &__set--cleared &__clear {
+    visibility: visible;
+  }
+
+  &__status {
+    background-color: @osu-colour-b5;
+    border-radius: 10000px;
+    display: inline-block;
+    padding: 0 0.5em;
+  }
+
+  &__set--cleared &__status {
+    background-color: @osu-colour-l1;
   }
 
   &__link {
@@ -40,5 +59,9 @@
   &__set {
     list-style: none;
     font-style: italic;
+
+    & + & {
+      margin-top: 0.5em;
+    }
   }
 }
