--- a/resources/assets/less/bem/beatmap-packs.less
+++ b/resources/assets/less/bem/beatmap-packs.less
@@ -77,5 +77,17 @@
 
   &__row {
     display: flex;
+    margin-left: 4px;
+  }
+
+  &__stripe {
+    background-color: @osu-colour-b5;
+    height: 100%;
+    position: absolute;
+    width: 4px;
+
+    &--clear {
+      background-color: @osu-colour-l1;
+    }
   }
 }
