Account for nav header in anchor position

--- a/resources/assets/less/bem/beatmap-pack.less
+++ b/resources/assets/less/bem/beatmap-pack.less
@@ -21,6 +21,10 @@
   width: 100%;
   margin: 2px 0;
 
+  > a {
+    .fragment-target-fn();
+  }
+
   &__body {
     background-color: @osu-colour-b3;
   }
