Add fonts specific to zh-tw
Use Microsoft JhengHei instead of Microsoft YaHei for Traditional Chinese (zh-tw). Not sure what Hiragino Sans GB is, but the equivalent for Traditional Chinese is Hiragino Sans TC, apparently.

--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -33,6 +33,7 @@
   --font-default: @font-default;
   --font-default-vi: @font-default-vi;
   --font-default-zh: @font-default-zh;
+  --font-default-zh-tw: @font-default-zh-tw;
   --font-content: @font-content;
 }
 
