reduce padding when narrow

--- a/resources/assets/less/bem/user-list.less
+++ b/resources/assets/less/bem/user-list.less
@@ -24,6 +24,10 @@
     padding: 20px 40px;
     font-size: @font-size--title-small;
     justify-content: flex-end;
+
+    @media @narrow {
+      padding: 20px 10px;
+    }
   }
 
   &__toolbar-item {
