column for avatar shouldn't be smaler than avatar

--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -193,7 +193,7 @@
 
     &--details {
       display: grid;
-      grid-template-columns: auto 1fr;
+      grid-template-columns: minmax(min-content, auto) 1fr;
     }
 
     &--status {
