opacity transition looks dumb when changing view modes

--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -251,9 +251,7 @@
       font-size: 10px;
       background-color: @osu-colour-b6;
       opacity: 0;
-      transition:
-        background-color 120ms ease-in-out,
-        opacity 120ms ease-in-out;
+      transition: background-color 120ms ease-in-out;
 
       // NB: there is a issue where clicking on the button to close the menu
       // causes the state to momentarily unhover and rehover
