--- a/resources/assets/less/bem/user-card.less
+++ b/resources/assets/less/bem/user-card.less
@@ -308,6 +308,7 @@
   &__status-icon-container {
     .center-content();
     flex: none;
+    // TODO: put in grid instead?
     width: @avatar-size;
 
     .@{top}--list & {
